@@ -193,7 +193,8 @@ D  "rungs -q -dNOPAUSE -dBATCH -dEPSCrop -sDEVICE=pdfwrite -dCompatibilityLevel=
 %% Image cache life in hours
 %%  0 means erase all old images and leave new images
 %% -1 means erase all old images and also erase new images
-%I -1
+%% -2 means ignore image cache
+%I -2
 
 %% Font Map Files
 %%
