@@ -1,3 +1,9 @@
+2013-04-30  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
+
+	* src/dpxfile.c, src/pdfximage.c, src/dvipdfmx.c, data/dvipdfmx.cfg:
+	Add c compatible mode with the old behavior per Karl, where
+	image cache is ignored.
+
 2013-04-30  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* xdvipdfmx.test: New shell script for a simple test.
